--- a/music.html
+++ b/music.html
@@ -43,7 +43,8 @@
     		<div class="col-xs-2 right" id="navRight">
     			<nav>
 	    			<a href="photo.html"> Photography</a>
-	    			<a href="music.html" class ="active"> Music</a>
+	    			<a href="music.html" class="active"> Music</a>
+	    			<a href="https://www.instagram.com/hasoogu"> Manhole Proj </a>
 	    			<a href="https://www.soundcloud.com/yakurt"> <i class="fab fa-soundcloud"></i></a>
 	    			<a href="https://www.instagram.com/sukhyun.sung/"> <i class="fab fa-instagram"></i></a>
     			</nav>
