--- a/aboutme.html
+++ b/aboutme.html
@@ -4,31 +4,20 @@
 	<title>Suk Hyun Sung</title>
 	<meta charset="utf-8"> 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="main_style.css">
-	<link rel="icon" type="image/x-icon" href="/resource/image/favicon.png">
+	<link rel="stylesheet" type="text/css" href="left_style.css">
 	<link href=' http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="main_js.js"></script>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122222775-2"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
-
-	  gtag('config', 'UA-122222775-2');
-	</script>
-
+	<script src="left_js.js"></script>
 </head>
 <body>
-
 	<div class="container-fluid">		
 	    <div class="row-fluid h100 z0">
     		<div class="col-xs-2 left" id="navLeft">
 	    	<div id ="navs">
     			<nav>
-	    			<a href="aboutme.html"> About me</a>
+    				<a href="index.html"> Suk Hyun</a>
+	    			<a href="aboutme.html" class = "active"> About me</a>
 	    			<a> Research</a>
 	    		</nav>
     		</div>
@@ -37,13 +26,10 @@
     		<div  class="col-xs-8 pad0 left" id="colLeft">
 	    		<div class="col-xs-12 left" id="contLeft" >
 	    			<div class="actualCont">
+	    				<p>Ph.D Pre-Candidate in Materials Science and Engineering, University of Michigan</p>
+	    				<p>B.S. in Engineering Physics, Cornell University 2016</p>
 	    			</div>
-				</div>
-    		</div>
-
-    		<div class="col-xs-0 pad0 right" id="colRight" >
-	    		<div class="col-xs-12 right" id="contRight" >
-				</div>
+	    		</div>
     		</div>
 
     		<div class="col-xs-2 right" id="navRight">
@@ -55,12 +41,7 @@
     		</div>
 
 	    </div>
-	    <div class="row-fluid h100 z1">
-	    	<div class="col-xs-12 centermiddle">
-	    			Suk Hyun Sung
-	    	</div>
-	    </div>
-	</div>
+</div>
 
 </body>
 
