--- a/photo.html
+++ b/photo.html
@@ -62,10 +62,9 @@
 
     		<div class="col-xs-2 right" id="navRight">
     			<nav>
-	    			<a href="photo.html" class ="active"> Photography</a>
-	    			<a href="music.html"> Music</a>
-	    			<a href="https://www.soundcloud.com/yakurt"> <i class="fab fa-soundcloud"></i></a>
-	    			<a href="https://www.instagram.com/sukhyun.sung/"> <i class="fab fa-instagram"></i></a>
+	    			<a href="https://www.instagram.com/sukhyun.sung/" class="active"> Photography</a>
+	    			<a href="https://www.soundcloud.com/yakurt"> Music</a>
+	    			<a href="https://www.instagram.com/hasoogu"> Manhole Proj </a>
     			</nav>
     		</div>
 
