--- a/aboutme.html
+++ b/aboutme.html
@@ -1,49 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-	<title>Suk Hyun Sung</title>
-	<meta charset="utf-8"> 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="left_style.css">
-	<link href=' http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="left_js.js"></script>
+    <link rel = "stylesheet" href="css/bootstrap.min.css">
+    <link rel = "stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <link rel = "stylesheet" href="https://fonts.googleapis.com/css?family=Hammersmith+One">
+    <link rel = "stylesheet" href="css/main.css">
+    <script src="js/bootstrap.bundle.js"></script>
+    <script src="js/jquery-3.4.1.min.js"></script>
 </head>
+
 <body>
-	<div class="container-fluid">		
-	    <div class="row-fluid h100 z0">
-    		<div class="col-xs-2 left" id="navLeft">
-	    	<div id ="navs">
-    			<nav>
-    				<a href="index.html"> Suk Hyun</a>
-	    			<a href="aboutme.html" class = "active"> About me</a>
-	    			<a> Research</a>
-	    		</nav>
-    		</div>
-    		</div>
-
-    		<div  class="col-xs-8 pad0 left" id="colLeft">
-	    		<div class="col-xs-12 left" id="contLeft" >
-	    			<div class="actualCont">
-	    				<p>Ph.D Pre-Candidate in Materials Science and Engineering, University of Michigan</p>
-	    				<p>B.S. in Engineering Physics, Cornell University 2016</p>
-	    			</div>
-	    		</div>
-    		</div>
-
-    		<div class="col-xs-2 right" id="navRight">
-    			<nav>
-	    			<a href="https://www.instagram.com/sukhyun.sung/"> Photography</a>
-	    			<a href="https://www.instagram.com/hasoogu"> Manhole Proj </a>
-	    			<a href="https://www.soundcloud.com/yakurt"> Music</a>
-    			</nav>
-    		</div>
-
-	    </div>
-</div>
-
+    <div class="row">
+		<div class="col-md-1 d-none d-md-block"></div>
+		<div class="col-md-11 col-sm-12" id="header"><a href="index.html">Suk Hyun Sung</a></div>
+	</div>
+    <div class="row" id="main">
+		<div class="col-md-3 col-lg-3 col-sm-12" id="nav">
+			<ul>
+				<li class="active"><a href="aboutme.html">About Me</a></li>
+				<li><a href="publications.html">Publications</a></li>
+				<li><a href="music.html">Music</a></li>
+			</ul>
+		</div>
+		<div class="col-sm-12 col-md-5" id="content">
+			<p> </p>
+			<p>Ph.D Candidate in Materials Science and Engineering, University of Michigan</p>
+			<p>B.S. in Engineering Physics, Cornell University</p>
+			<p>sukhsung -at- umich.edu</p>
+		</div>
+    </div>
 </body>
-
-</html>
-
