--- a/aboutme.html
+++ b/aboutme.html
@@ -21,11 +21,13 @@
 				<li><a href="music.html">Music</a></li>
 			</ul>
 		</div>
-		<div class="col-sm-12 col-md-5" id="content">
-			<p> </p>
-			<p>Ph.D Candidate in Materials Science and Engineering, University of Michigan</p>
-			<p>B.S. in Engineering Physics, Cornell University</p>
-			<p>sukhsung -at- umich.edu</p>
+		<div class="col-sm-12 col-md-8" id="content">
+			<ul>
+				<li>Ph.D Candidate in Materials Science and Engineering, University of Michigan, since 2017</li>
+				<li>B.S. in Engineering Physics, Cornell University, 2016</li>
+				<li><p></p></li>
+				<li>sukhsung -at- umich.edu</li>
+			</ul>
 		</div>
     </div>
 </body>
