--- a/publications.html
+++ b/publications.html
@@ -25,11 +25,11 @@
 			<ul id="pub">
 				<li>P. B. Meisenheimer, L. D. Williams, <strong>S. H. Sung</strong>, J. Gim, P. Shafer, M. Trassin, R. Hovden, E. Kioupakis, and J. T. Heron “Magnetic Frustration Control Through Tunable Stereochemically-Driven Structural Disorder in Entropy-Stabilized Oxides” <i>Physical Review Materials</i> 3, 104420 (2019)</li>
 				<li>Y. Wang, Y. Wu, J. Schwartz, <strong>S. H. Sung</strong>, R. Hovden, and Z. Mi “A Single Junction Cathodic Approach for Stable Unassisted Solar Water Splitting” Joule (2019)</li>
-				<li><strong>S. H. Sung</strong>, N. Schnitzer, L. Brown, J. Park, D. A. Muller, and R. Hovden “Stacking, Strain, & Twist in 2D materials Quantified by 3D Electron Diffraction” Physical Review Materials 3, 064003 (2019)</li>
-				<li>N. Schnitzer, <strong>S. H. Sung</strong>†, and R. Hovden “Introduction to the Ronchigram and its Calculation with Ronchigram.com” Microscopy Today 27 (3), 12-15 (2019)</li>
-				<li>H. Yoo, R. Engelke, S. Carr, S. Fang, K. Zhang, P. Cazeaux, <strong>S. H. Sung</strong>, R. Hovden, A. Tsen, T. Taniguchi, K. Watanabe, G-C. Yi, M. Kim, M. Luskin, E. Tadmor, E. Kaxiras, and P. Kim “Atomic and Electronic Reconstruction at the van der Waals Interface in Twisted Bilayer Graphene” Nature Materials 18, 448-453 (2019)</li>
-				<li>S. Chatterjee, <strong>S. Sung</strong>, D. J. Baek, L. F. Kourkoutis, D. G. Schlom, and K. M. Shen “Epitaxial growth and electronic properties of mixed valence YbAl3 thin films” Journal of Applied Physics 120, 035105 (2016)</li>
-				<li>Y. F. Nie, Y. Zhu, C.-H. Lee, L. F. Kourkoutis, J. A. Mundy, J. Junquera, Ph. Ghosez, D. J. Baek, <strong>S. Sung</strong>, X. X. Xi, K. M. Shen, D. A. Muller, and D. G. Schlom “Atomically precise interfaces from stoichiometric deposition” Nature Communications 5:4530 (2014)</li>
+				<li><strong>S. H. Sung</strong>, N. Schnitzer, L. Brown, J. Park, D. A. Muller, and R. Hovden “Stacking, Strain, & Twist in 2D materials Quantified by 3D Electron Diffraction” <i>Physical Review Materials</i> 3, 064003 (2019)</li>
+				<li>N. Schnitzer, <strong>S. H. Sung</strong>†, and R. Hovden “Introduction to the Ronchigram and its Calculation with Ronchigram.com” <i>Microscopy Today</i> 27 (3), 12-15 (2019)</li>
+				<li>H. Yoo, R. Engelke, S. Carr, S. Fang, K. Zhang, P. Cazeaux, <strong>S. H. Sung</strong>, R. Hovden, A. Tsen, T. Taniguchi, K. Watanabe, G-C. Yi, M. Kim, M. Luskin, E. Tadmor, E. Kaxiras, and P. Kim “Atomic and Electronic Reconstruction at the van der Waals Interface in Twisted Bilayer Graphene” <i>Nature Materials</i> 18, 448-453 (2019)</li>
+				<li>S. Chatterjee, <strong>S. Sung</strong>, D. J. Baek, L. F. Kourkoutis, D. G. Schlom, and K. M. Shen “Epitaxial growth and electronic properties of mixed valence YbAl3 thin films” <i>Journal of Applied Physics</i> 120, 035105 (2016)</li>
+				<li>Y. F. Nie, Y. Zhu, C.-H. Lee, L. F. Kourkoutis, J. A. Mundy, J. Junquera, Ph. Ghosez, D. J. Baek, <strong>S. Sung</strong>, X. X. Xi, K. M. Shen, D. A. Muller, and D. G. Schlom “Atomically precise interfaces from stoichiometric deposition” <i>Nature Communications</i> 5:4530 (2014)</li>
 				<li><p> </p> </li>
 				<li>† Corresponding Author</li>
 				<li>* The authors Contributed equally</li>
