--- a/aboutme.html
+++ b/aboutme.html
@@ -14,7 +14,7 @@
 		<div class="col-md-11 col-sm-12" id="header"><a href="index.html">Suk Hyun Sung</a></div>
 	</div>
     <div class="row" id="main">
-		<div class="col-md-3 col-lg-3 col-sm-12" id="nav">
+		<div class="col-md-3 col-sm-12" id="nav">
 			<ul>
 				<li class="active"><a href="aboutme.html">About Me</a></li>
 				<li><a href="publications.html">Publications</a></li>
@@ -23,7 +23,9 @@
 		</div>
 		<div class="col-sm-12 col-md-8" id="content">
 			<ul>
-				<li>Ph.D Candidate in Materials Science and Engineering, University of Michigan, since 2017</li>
+				<li>Ph.D Candidate in Materials Science and Engineering, University of Michigan, since 2017
+				<li class="indent">Reserach Interests: Electron Microscopy, 2D Materials, Quantum Materials</li>
+				</li>
 				<li>B.S. in Engineering Physics, Cornell University, 2016</li>
 				<li><p></p></li>
 				<li>sukhsung -at- umich.edu</li>
