--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel = "stylesheet" href="https://fonts.googleapis.com/css?family=Hammersmith+One">
     <link rel = "stylesheet" href="css/main.css">
     <script src="js/bootstrap.bundle.js"></script>
-    <script src="js/jquery-3.4.1.min.js"></script>
+	<script src="js/jquery-3.4.1.min.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
