--- a/aboutme.html
+++ b/aboutme.html
@@ -6,6 +6,7 @@
     <link rel = "stylesheet" href="css/main.css">
     <script src="js/bootstrap.bundle.js"></script>
     <script src="js/jquery-3.4.1.min.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
