--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
+<html>
 <head>
     <link rel = "stylesheet" href="css/bootstrap.min.css">
     <link rel = "stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel = "stylesheet" href="https://fonts.googleapis.com/css?family=Hammersmith+One">
     <link rel = "stylesheet" href="css/main.css">
-    <script src="js/bootstrap.bundle.js"></script>
 	<script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/bootstrap.bundle.js"></script>
+	<script src="js/main.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -15,15 +17,23 @@
 		<div class="col-md-11 col-sm-12" id="header"><a href="index.html">Suk Hyun Sung</a></div>
 	</div>
     <div class="row" id="main">
-		<div class="col-md-3 col-sm-12" id="nav">
-			<ul>
-				<li><a href="aboutme.html">About Me</a></li>
-				<li><a href="publications.html">Publications</a></li>
-				<li><a href="music.html">Music</a></li>
+		<div class="col-md-3 col-sm-12" id="navbar">			
+			<ul id="nav">
+				<li id="aboutme"><a href="#">About Me</a></li>
+				<li id="publications"><a href="#">Publications</a></li>
+				<li id="music"><a href="#">Music</a></li>
 			</ul>
-		</div>
+		</div>		
 		<div class="col-sm-12 col-md-8" id="content">
-			This is Main Content
+			This is main Content	
 		</div>
     </div>
 </body>	
+
+<script>
+	$("#nav li").click(function() {
+		console.log(this.id);
+		loadContent(this.id)
+	});
+</script>
+</html>
