--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="row">
 		<div class="col-md-1 d-none d-md-block"></div>
-		<div class="col-md-11 col-sm-12" id="header"><a href="index.html">Suk Hyun Sung</a></div>
+		<div class="col-md-11 col-sm-12" id="header"><a href="#">Suk Hyun Sung</a></div>
 	</div>
     <div class="row" id="main">
 		<div class="col-md-3 col-sm-12" id="navbar">			
@@ -25,15 +25,17 @@
 			</ul>
 		</div>		
 		<div class="col-sm-12 col-md-8" id="content">
-			This is main Content	
 		</div>
     </div>
 </body>	
 
 <script>
 	$("#nav li").click(function() {
-		console.log(this.id);
 		loadContent(this.id)
 	});
+	$("#header a").click(function() {
+		loadMain();;
+	});
+	loadMain();
 </script>
 </html>
