better handle loading things

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <div class="row" id="main">
 		<div class="col-md-3 col-sm-12" id="navbar">			
 			<ul id="nav">
-				<li id="aboutme"><a href="#">About Me</a></li>
-				<li id="publications"><a href="#">Publications</a></li>
-				<li id="music"><a href="#">Music</a></li>
+				<li id="aboutme" class="inactive"><a href="#">About Me</a></li>
+				<li id="publications" class="inactive"><a href="#">Publications</a></li>
+				<li id="music" class="inactive"><a href="#">Music</a></li>
 			</ul>
 		</div>		
 		<div class="col-sm-12 col-md-8" id="content">
