--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 
 	<body>
 		<div class="row">
-			<div class="col-md-1 d-none d-md-block"></div>
-			<div class="col-md-11 col-sm-12" id="header"><a href="#">Suk Hyun Sung</a></div>
+			<div class="col-12" id="header"><a href="#">Suk Hyun Sung</a></div>
 		</div>
 		<div class="row" id="main">
 			<div class="col-md-3 col-sm-12" id="navbar">			
@@ -24,7 +23,7 @@
 					<li id="music" class="inactive"><a href="#">Music</a></li>
 				</ul>
 			</div>		
-			<div class="col-sm-12 col-md-8" id="content">
+			<div class="col-md-8 col-sm-12"  id="content">
 			</div>
 		</div>
 	</body>	
