--- a/index.html
+++ b/index.html
@@ -18,18 +18,19 @@
 		<div class="row" id="main">
 			<div class="col-md-3 col-sm-12" id="navbar">			
 				<ul id="nav">
-					<li id="aboutme" class="inactive"><a href="#">About Me</a></li>
-					<li id="publications" class="inactive"><a href="#">Publications</a></li>
-					<li id="music" class="inactive"><a href="#">Music</a></li>
+					<li><a href="#" id="aboutme"		 class="inactive">About Me</a></li>
+					<li><a href="#" id="publications" class="inactive">Publications</a></li>
+					<li><a href="#" id="music"		 class="inactive">Music</a></li>
 				</ul>
 			</div>		
 			<div class="col-md-8 col-sm-12"  id="content">
 			</div>
+			<div id="textBox">Hi</div>
 		</div>
 	</body>	
 
 	<script>
-		$("#nav li").click(function() {
+		$("#nav a").click(function() {
 			loadContent(this.id)
 		});
 		$("#header a").click(function() {
