added some transition animations

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<link rel = "stylesheet" href="css/bootstrap.min.css">
 		<link rel = "stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-		<link rel = "stylesheet" href="https://fonts.googleapis.com/css?family=Hammersmith+One">
+		<link rel = "stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat	">
 		<link rel = "stylesheet" href="css/main.css">
 		<script src="js/jquery-3.4.1.min.js"></script>
 		<script src="js/bootstrap.bundle.js"></script>
@@ -12,7 +12,7 @@
 	</head>
 
 	<body>
-		<div class="row">
+		<div class="row" id="top">
 			<div class="col-12" id="header"><a href="#">Suk Hyun Sung</a></div>
 		</div>
 		<div class="row" id="main">
@@ -24,8 +24,6 @@
 				</ul>
 			</div>		
 			<div class="col-md-8 col-sm-12"  id="content">
-			</div>
-			<div id="textBox">Hi</div>
 		</div>
 	</body>	
 
