--- a/publications.html
+++ b/publications.html
@@ -1,11 +1,11 @@
 <ul id="pub">
-	<li><a href="https://doi.org/10.1103/PhysRevMaterials.3.104420">P. B. Meisenheimer, L. D. Williams, <strong>S. H. Sung</strong>, J. Gim, P. Shafer, M. Trassin, R. Hovden, E. Kioupakis, and J. T. Heron “Magnetic Frustration Control Through Tunable Stereochemically-Driven Structural Disorder in Entropy-Stabilized Oxides” <i>Physical Review Materials</i> 3, 104420 (2019)</a></li>
-	<li><a href="https://doi.org/10.1016/j.joule.2019.07.022">Y. Wang, Y. Wu, J. Schwartz, <strong>S. H. Sung</strong>, R. Hovden, and Z. Mi “A Single Junction Cathodic Approach for Stable Unassisted Solar Water Splitting” Joule (2019)</a></li>
-	<li><a href="https://doi.org/10.1103/PhysRevMaterials.3.064003"><strong>S. H. Sung</strong>, N. Schnitzer, L. Brown, J. Park, D. A. Muller, and R. Hovden “Stacking, Strain, & Twist in 2D materials Quantified by 3D Electron Diffraction” <i>Physical Review Materials</i> 3, 064003 (2019)</a></li>
-	<li><a href="https://doi.org/10.1017/S1551929519000427">N. Schnitzer, <strong>S. H. Sung</strong>†, and R. Hovden “Introduction to the Ronchigram and its Calculation with Ronchigram.com” <i>Microscopy Today</i> 27 (3), 12-15 (2019)</a></li>
-	<li><a href="https://doi.org/10.1038/s41563-019-0346-z">H. Yoo, R. Engelke, S. Carr, S. Fang, K. Zhang, P. Cazeaux, <strong>S. H. Sung</strong>, R. Hovden, A. Tsen, T. Taniguchi, K. Watanabe, G-C. Yi, M. Kim, M. Luskin, E. Tadmor, E. Kaxiras, and P. Kim “Atomic and Electronic Reconstruction at the van der Waals Interface in Twisted Bilayer Graphene” <i>Nature Materials</i> 18, 448-453 (2019)</a></li>
-	<li><a href="https://doi.org/10.1063/1.4958336">S. Chatterjee, <strong>S. Sung</strong>, D. J. Baek, L. F. Kourkoutis, D. G. Schlom, and K. M. Shen “Epitaxial growth and electronic properties of mixed valence YbAl3 thin films” <i>Journal of Applied Physics</i> 120, 035105 (2016)</a></li>
-	<li><a href="https://doi.org/10.1038/ncomms5530">Y. F. Nie, Y. Zhu, C.-H. Lee, L. F. Kourkoutis, J. A. Mundy, J. Junquera, Ph. Ghosez, D. J. Baek, <strong>S. Sung</strong>, X. X. Xi, K. M. Shen, D. A. Muller, and D. G. Schlom “Atomically precise interfaces from stoichiometric deposition” <i>Nature Communications</i> 5:4530 (2014)</a></li>
+	<li><a href="https://doi.org/10.1103/PhysRevMaterials.3.104420">Magnetic Frustration Control Through Tunable Stereochemically-Driven Structural Disorder in Entropy-Stabilized Oxides<br /><i>Physical Review Materials</i> 3, 104420 (2019)</a></li>
+	<li><a href="https://doi.org/10.1016/j.joule.2019.07.022">A Single Junction Cathodic Approach for Stable Unassisted Solar Water Splitting<br /><i>Joule</i> (2019)</a></li>
+	<li><a href="https://doi.org/10.1103/PhysRevMaterials.3.064003">Stacking, Strain, & Twist in 2D materials Quantified by 3D Electron Diffraction<br /><i>Physical Review Materials</i> 3, 064003 (2019)</a></li>
+	<li><a href="https://doi.org/10.1017/S1551929519000427">Introduction to the Ronchigram and its Calculation with Ronchigram.com<br /><i>Microscopy Today</i> 27 (3), 12-15 (2019)</a></li>
+	<li><a href="https://doi.org/10.1038/s41563-019-0346-z">Atomic and Electronic Reconstruction at the van der Waals Interface in Twisted Bilayer Graphene<br /><i>Nature Materials</i> 18, 448-453 (2019)</a></li>
+	<li><a href="https://doi.org/10.1063/1.4958336">Epitaxial growth and electronic properties of mixed valence YbAl3 thin films<br /><i>Journal of Applied Physics</i> 120, 035105 (2016)</a></li>
+	<li><a href="https://doi.org/10.1038/ncomms5530">Atomically precise interfaces from stoichiometric deposition<br /><i>Nature Communications</i> 5:4530 (2014)</a></li>
 	<li><p> </p></li>
 	<li>† Corresponding Author</li>
 	<li>* The authors Contributed equally</li>
