added some transition animations

--- a/aboutme.html
+++ b/aboutme.html
@@ -1,8 +1,6 @@
-<ul>
-	<li>Ph.D Candidate in Materials Science and Engineering, University of Michigan, since 2017
-	<li class="indent">Reserach Interests: Electron Microscopy, 2D Materials, Quantum Materials</li>
-	</li>
+<ul id="contentList">
+	<li>Ph.D Candidate in Materials Science and Engineering, University of Michigan, since 2017 <br />Reserach Interests: Electron Microscopy, 2D Materials, Quantum Materials</li>
 	<li>B.S. in Engineering Physics, Cornell University, 2016</li>
 	<li><p></p></li>
-	<li>sukhsung -at- umich.edu</li>
+	<li>sukhsung--at--umich.edu</li>
 </ul>
