--- a/publications.html
+++ b/publications.html
@@ -1,4 +1,4 @@
-<ul id="pub">
+<ul id="contentList">
 	<li><a href="https://doi.org/10.1103/PhysRevMaterials.3.104420">Magnetic Frustration Control Through Tunable Stereochemically-Driven Structural Disorder in Entropy-Stabilized Oxides<br /><i>Physical Review Materials</i> 3, 104420 (2019)</a></li>
 	<li><a href="https://doi.org/10.1016/j.joule.2019.07.022">A Single Junction Cathodic Approach for Stable Unassisted Solar Water Splitting<br /><i>Joule</i> (2019)</a></li>
 	<li><a href="https://doi.org/10.1103/PhysRevMaterials.3.064003">Stacking, Strain, & Twist in 2D materials Quantified by 3D Electron Diffraction<br /><i>Physical Review Materials</i> 3, 064003 (2019)</a></li>
