added some transition animations

--- a/aboutme.html
+++ b/aboutme.html
@@ -2,5 +2,5 @@
 	<li>Ph.D Candidate in Materials Science and Engineering, University of Michigan, since 2017 <br />Reserach Interests: Electron Microscopy, 2D Materials, Quantum Materials</li>
 	<li>B.S. in Engineering Physics, Cornell University, 2016</li>
 	<li><p></p></li>
-	<li>sukhsung--at--umich.edu</li>
+	<li>sukhsung -at- umich.edu</li>
 </ul>
