--- a/index.html
+++ b/index.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel = "stylesheet" href="css/bootstrap.min.css">
 		<link rel = "stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 		<link rel = "stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat	">
 		<link rel = "stylesheet" href="css/main.css">
 		<script src="js/jquery-3.4.1.min.js"></script>
-		<script src="js/bootstrap.bundle.js"></script>
 		<script src="js/main.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 
 	<body>
-		<div class="row" id="top">
-			<div class="col-12" id="header"><a href="#">Suk Hyun Sung</a></div>
+		<div id="top">
+			<div id="header"><a href="#">Suk Hyun Sung</a></div>
 		</div>
-		<div class="row" id="main">
-			<div class="col-md-3 col-sm-12" id="navbar">			
+		<div id="main">
+			<div id="navbar">			
 				<ul id="nav">
 					<li><a href="#" id="aboutme"		 class="inactive">About Me</a></li>
 					<li><a href="#" id="publications" class="inactive">Publications</a></li>
 					<li><a href="#" id="music"		 class="inactive">Music</a></li>
 				</ul>
 			</div>		
-			<div class="col-md-8 col-sm-12"  id="content">
+			<div id="content">
+			</div>
 		</div>
 	</body>	
 
