better handle mid size device

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 			loadContent(this.id)
 		});
 		$("#header a").click(function() {
-			loadMain();;
+			loadMain();
 		});
-		loadContent("publications");
+		loadMain();
 	</script>
 </html>
