grayed out citation

--- a/publications.html
+++ b/publications.html
@@ -1,11 +1,11 @@
 <ul id="contentList">
-	<li><a href="https://doi.org/10.1103/PhysRevMaterials.3.104420">Magnetic Frustration Control Through Tunable Stereochemically-Driven Structural Disorder in Entropy-Stabilized Oxides<br /><i>Physical Review Materials</i> 3, 104420 (2019)</a></li>
-	<li><a href="https://doi.org/10.1016/j.joule.2019.07.022">A Single Junction Cathodic Approach for Stable Unassisted Solar Water Splitting<br /><i>Joule</i> (2019)</a></li>
-	<li><a href="https://doi.org/10.1103/PhysRevMaterials.3.064003">Stacking, Strain, & Twist in 2D materials Quantified by 3D Electron Diffraction<br /><i>Physical Review Materials</i> 3, 064003 (2019)</a></li>
-	<li><a href="https://doi.org/10.1017/S1551929519000427">Introduction to the Ronchigram and its Calculation with Ronchigram.com<br /><i>Microscopy Today</i> 27 (3), 12-15 (2019)</a></li>
-	<li><a href="https://doi.org/10.1038/s41563-019-0346-z">Atomic and Electronic Reconstruction at the van der Waals Interface in Twisted Bilayer Graphene<br /><i>Nature Materials</i> 18, 448-453 (2019)</a></li>
-	<li><a href="https://doi.org/10.1063/1.4958336">Epitaxial growth and electronic properties of mixed valence YbAl3 thin films<br /><i>Journal of Applied Physics</i> 120, 035105 (2016)</a></li>
-	<li><a href="https://doi.org/10.1038/ncomms5530">Atomically precise interfaces from stoichiometric deposition<br /><i>Nature Communications</i> 5:4530 (2014)</a></li>
+	<li><a href="https://doi.org/10.1103/PhysRevMaterials.3.104420">Magnetic Frustration Control Through Tunable Stereochemically-Driven Structural Disorder in Entropy-Stabilized Oxides<br /><span class="grayed"><i>Physical Review Materials</i> 3, 104420 (2019)</span></a></li>
+	<li><a href="https://doi.org/10.1016/j.joule.2019.07.022">A Single Junction Cathodic Approach for Stable Unassisted Solar Water Splitting<br /><span class="grayed"><i>Joule</i> (2019)</span></a></li>
+	<li><a href="https://doi.org/10.1103/PhysRevMaterials.3.064003">Stacking, Strain, & Twist in 2D materials Quantified by 3D Electron Diffraction<br /><span class="grayed"><i>Physical Review Materials</i> 3, 064003 (2019)</span></a></li>
+	<li><a href="https://doi.org/10.1017/S1551929519000427">Introduction to the Ronchigram and its Calculation with Ronchigram.com<br /><span class="grayed"><i>Microscopy Today</i> 27 (3), 12-15 (2019)</span></a></li>
+	<li><a href="https://doi.org/10.1038/s41563-019-0346-z">Atomic and Electronic Reconstruction at the van der Waals Interface in Twisted Bilayer Graphene<br /><span class="grayed"><i>Nature Materials</i> 18, 448-453 (2019)</span></a></li>
+	<li><a href="https://doi.org/10.1063/1.4958336">Epitaxial growth and electronic properties of mixed valence YbAl3 thin films<br /><span class="grayed"><i>Journal of Applied Physics</i> 120, 035105 (2016)</span></a></li>
+	<li><a href="https://doi.org/10.1038/ncomms5530">Atomically precise interfaces from stoichiometric deposition<br /><span class="grayed"><i>Nature Communications</i> 5:4530 (2014)</span></a></li>
 	<li><p> </p></li>
 	<li>† Corresponding Author</li>
 	<li>* The authors Contributed equally</li>
