--- a/aboutme.html
+++ b/aboutme.html
@@ -1,5 +1,5 @@
 <ul id="contentList">
-	<li>Ph.D Candidate in Materials Science and Engineering, University of Michigan, since 2017 <br />Reserach Interests: Electron Microscopy, 2D Materials, Quantum Materials</li>
+	<li>Ph.D Candidate in Materials Science and Engineering, University of Michigan, since 2017 <br /><span class="gray">Reserach Interests: Electron Microscopy, 2D Materials, Quantum Materials</span></li>
 	<li>B.S. in Engineering Physics, Cornell University, 2016</li>
 	<li><p></p></li>
 	<li>sukhsung -at- umich.edu</li>
