--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel = "stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-		<link rel = "stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat	">
-		<link rel = "stylesheet" href="css/main.css">
+		<link rel = "stylesheet" href="css/index.css">
 		<script src="js/jquery-3.4.1.min.js"></script>
-		<script src="js/main.js"></script>
+		<script src="js/index.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 
@@ -35,6 +33,5 @@
 			loadMain();
 		});
 		loadMain();
-		loadContent("publications");
 	</script>
 </html>
