--- a/main.html
+++ b/main.html
@@ -1,1 +1,15 @@
-Main Page
+<link rel = "stylesheet" href="css/mainXY.css">
+<script src="js/mainXY.js"></script>
+<script src="js/math.js"></script>
+<script src="js/svg.js"></script>
+
+<div id = "svgDiv" width="100vw"  >
+    <div class="slidecontainer">
+        <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+    </div>
+    <script>
+        runIsing();
+    </script>
+    
+
+</div>
