--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
 		<script src="js/jquery-3.4.1.min.js"></script>
 		<script src="js/index.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122222775-2"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-122222775-2');
+		</script>
+
 	</head>
 
 	<body>
