--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 		<link rel = "stylesheet" href="css/index.css">
 		<script src="js/jquery-3.4.1.min.js"></script>
 		<script src="js/index.js"></script>
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<meta name="theme-color" content="#ffffff">
+		
+		<title>Suk Hyun Sung</title>
+		
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122222775-2"></script>
