fixed publication page

--- a/publications.html
+++ b/publications.html
@@ -1,13 +1,13 @@
 <ul id="contentList">
 	<li><a href="https://doi.org/10.1103/PhysRevMaterials.3.104420">Magnetic Frustration Control Through Tunable Stereochemically-Driven Structural Disorder in Entropy-Stabilized Oxides<br /><span class="gray"><i>Physical Review Materials,</i> 2019</span></a></li>
 	<li><a href="https://doi.org/10.1016/j.joule.2019.07.022">A Single Junction Cathodic Approach for Stable Unassisted Solar Water Splitting<br /><span class="gray"><i>Joule,</i> 2019</span></a></li>
-	<li><a href="https://doi.org/10.1103/PhysRevMaterials.3.064003">Stacking, Strain, & Twist in 2D materials Quantified by 3D Electron Diffraction<br /><span class="gray"><i>Physical Review Materials,</i> 2019</span></a></li>
-	<li><a href="https://doi.org/10.1017/S1551929519000427">Introduction to the Ronchigram and its Calculation with Ronchigram.com<br /><span class="gray"><i>Microscopy Today,</i> 2019</span></a></li>
+	<li><a href="https://doi.org/10.1103/PhysRevMaterials.3.064003">* Stacking, Strain, & Twist in 2D materials Quantified by 3D Electron Diffraction<br /><span class="gray"><i>Physical Review Materials,</i> 2019</span></a></li>
+	<li><a href="https://doi.org/10.1017/S1551929519000427">*,† Introduction to the Ronchigram and its Calculation with Ronchigram.com<br /><span class="gray"><i>Microscopy Today,</i> 2019</span></a></li>
 	<li><a href="https://doi.org/10.1038/s41563-019-0346-z">Atomic and Electronic Reconstruction at the van der Waals Interface in Twisted Bilayer Graphene<br /><span class="gray"><i>Nature Materials,</i> 2019</span></a></li>
 	<li><a href="https://doi.org/10.1063/1.4958336">Epitaxial growth and electronic properties of mixed valence YbAl3 thin films<br /><span class="gray"><i>Journal of Applied Physics,</i> 2016</span></a></li>
 	<li><a href="https://doi.org/10.1038/ncomms5530">Atomically precise interfaces from stoichiometric deposition<br /><span class="gray"><i>Nature Communications,</i> 2014</span></a></li>
 	<li><p> </p></li>
+	<li>* First or Co-first Author</li>
 	<li>† Corresponding Author</li>
-	<li>* The authors Contributed equally</li>
 	<li><a href="https://scholar.google.com/citations?user=8TgOW7YAAAAJ&hl=en&oi=ao">Google Scholar</a></li>
 </ul>
