--- a/publications.html
+++ b/publications.html
@@ -1,4 +1,6 @@
 <ul id="contentList">
+	<li><a href="#">* Optimal STEM Convergence Angle Selection using a Convolution Neural Network and the Strehl Ratio<br /><span class="gray"><i>Submitted,</i> 2020</span></a></li>
+	<li><a href="#">* The Limits of Resolution and Dose for Aberration-Corrected Electron Tomography<br /><span class="gray"><i>Submitted,</i> 2020</span></a></li>
 	<li><a href="https://doi.org/10.1103/PhysRevMaterials.3.104420">Magnetic Frustration Control Through Tunable Stereochemically-Driven Structural Disorder in Entropy-Stabilized Oxides<br /><span class="gray"><i>Physical Review Materials,</i> 2019</span></a></li>
 	<li><a href="https://doi.org/10.1016/j.joule.2019.07.022">A Single Junction Cathodic Approach for Stable Unassisted Solar Water Splitting<br /><span class="gray"><i>Joule,</i> 2019</span></a></li>
 	<li><a href="https://doi.org/10.1103/PhysRevMaterials.3.064003">* Stacking, Strain, & Twist in 2D materials Quantified by 3D Electron Diffraction<br /><span class="gray"><i>Physical Review Materials,</i> 2019</span></a></li>
