PR applied manuscript uploaded

--- a/publications.html
+++ b/publications.html
@@ -1,5 +1,5 @@
 <ul id="contentList">
-	<li><a href="https://arxiv.org/abs/2006.06585">* The Limits of Resolution and Dose for Aberration-Corrected Electron Tomography<br /><span class="gray"><i>In Press, Physical Review Applied</i> 2020</span></a></li>
+	<li><a href="https://journals.aps.org/prapplied/abstract/10.1103/PhysRevApplied.15.014003">* Limits of Three-Dimensional Resolution and Dose for Aberration-Corrected Electron Tomography<br /><span class="gray"><i>Physical Review Applied</i> 2021</span></a></li>
 	<li><a href="http://dx.doi.org/10.1017/S1431927620001841">* Optimal STEM Convergence Angle Selection using a Convolution Neural Network and the Strehl Ratio<br /><span class="gray"><i>Microscopy & Microanalysis,</i> 2020</span></a></li>
 	<li><a href="https://doi.org/10.1103/PhysRevMaterials.3.104420">Magnetic Frustration Control Through Tunable Stereochemically-Driven Structural Disorder in Entropy-Stabilized Oxides<br /><span class="gray"><i>Physical Review Materials,</i> 2019</span></a></li>
 	<li><a href="https://doi.org/10.1016/j.joule.2019.07.022">A Single Junction Cathodic Approach for Stable Unassisted Solar Water Splitting<br /><span class="gray"><i>Joule,</i> 2019</span></a></li>
