--- a/aboutme.html
+++ b/aboutme.html
@@ -3,4 +3,6 @@
 	<li>B.S. in Engineering Physics, Cornell University, 2016</li>
 	<li><p></p></li>
 	<li>sukhsung -at- umich.edu</li>
+	<li><p></p></li>
+	<li><a href="Cv.pdf">Curriculum Vitae</a></li>
 </ul>
