--- a/publications.html
+++ b/publications.html
@@ -1,4 +1,5 @@
 <ul id="contentList">
+	<li><a href="https://doi.org/10.1038/s41467-021-22793-x">Engineering new limits to magnetostriction through metastability in iron-gallium alloys<br /><span class="gray"><i>Nature Communications,</i> 2021</span></a></li>
 	<li><a href="https://doi.org/10.1103/PhysRevApplied.15.014003">* Limits of Three-Dimensional Resolution and Dose for Aberration-Corrected Electron Tomography<br /><span class="gray"><i>Physical Review Applied,</i> 2021</span></a></li>
 	<li><a href="http://dx.doi.org/10.1017/S1431927620001841">* Optimal STEM Convergence Angle Selection using a Convolution Neural Network and the Strehl Ratio<br /><span class="gray"><i>Microscopy & Microanalysis,</i> 2020</span></a></li>
 	<li><a href="https://doi.org/10.1103/PhysRevMaterials.3.104420">Magnetic Frustration Control Through Tunable Stereochemically-Driven Structural Disorder in Entropy-Stabilized Oxides<br /><span class="gray"><i>Physical Review Materials,</i> 2019</span></a></li>
