publication updated, darkmode bug fix

--- a/publications.html
+++ b/publications.html
@@ -1,4 +1,8 @@
 <ul id="contentList">
+	<li><a href="https://doi.org/10.1038/s41467-021-22793-x">* Two-dimensional charge order stabilized in clean polytype heterostructures<br /><span class="gray"><i>Nature Communications,</i> 2022</span></a></li>
+	<li><a href="https://doi.org/10.1038/s41467-021-22793-x">Robotic Four-Dimensional Pixel Assembly of van der Waals Solids<br /><span class="gray"><i>Nature Nanotechnology,</i> 2022</span></a></li>
+	<li><a href="https://doi.org/10.1038/s41467-021-22793-x">Twist engineering of the two-dimensional magnetism in double bilayer chromium triiodide homostructures<br /><span class="gray"><i>Nature Physics,</i> 2021</span></a></li>
+	<li><a href="https://doi.org/10.1038/s41467-021-22793-x">Ultrafast Modulations and Detection of a Ferro-Rotational Charge Density Wave Using Time-Resolved Electric Quadrupole Second Harmonic Generation<br /><span class="gray"><i>Physical Review Letters,</i> 2021</span></a></li>
 	<li><a href="https://doi.org/10.1038/s41467-021-22793-x">Engineering new limits to magnetostriction through metastability in iron-gallium alloys<br /><span class="gray"><i>Nature Communications,</i> 2021</span></a></li>
 	<li><a href="https://doi.org/10.1103/PhysRevApplied.15.014003">* Limits of Three-Dimensional Resolution and Dose for Aberration-Corrected Electron Tomography<br /><span class="gray"><i>Physical Review Applied,</i> 2021</span></a></li>
 	<li><a href="http://dx.doi.org/10.1017/S1431927620001841">* Optimal STEM Convergence Angle Selection using a Convolution Neural Network and the Strehl Ratio<br /><span class="gray"><i>Microscopy & Microanalysis,</i> 2020</span></a></li>
