--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<li><a href="#" id="aboutme"		 class="inactive">About Me</a></li>
 					<li><a href="#" id="publications" class="inactive">Publications</a></li>
 					<li><a href="Cv.pdf" id="cv" class="inactive">C. V.</a></li>
-					<li><a href="#" onclick="loadMain()"><img src = "darkmode.svg" id="darkmode"/></a></li>
+					<li><a href="#" onclick="toggleDark()"><img src = "darkmode.svg" id="darkmode"/></a></li>
 					<!-- <li><a href="#" id="music"		 class="inactive">Music</a></li> -->
 				</ul>
 			</div>		
