--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 				<ul id="nav">
 					<li><a href="#" id="aboutme"		 class="inactive">About Me</a></li>
 					<li><a href="#" id="publications" class="inactive">Publications</a></li>
-					<li><a href="Cv.pdf" id="cv" class="inactive">C. V.</a></li>
+					<li><a href="#" id="cv" class="inactive">C. V.</a></li>
+					<!-- <li><a href="Cv.pdf" id="cv" class="inactive">C. V.</a></li> -->
 					<li><img src = "darkmode.svg" id="darkmode" onclick="toggleDark()"/></li>
 					<!-- <li><a href="#" id="music"		 class="inactive">Music</a></li> -->
 				</ul>
