--- a/cv.html
+++ b/cv.html
@@ -5,3 +5,6 @@
     style="border: none;"></iframe>
  -->
 <iframe width = "100%" height="700vh" src="js/pdfjs/web/viewer.html?file=/Cv.pdf"></iframe>
+<ul id="contentList">
+	<li><a href="/Cv.pdf">Curriculum Vitae</a></li>
+</ul>
