--- a/publications.html
+++ b/publications.html
@@ -1,18 +1,8 @@
+<script type="text/javascript" src="/data/pubList.js"></script>
+<script type="text/javascript" src="/js/publications.js"></script>
+
 <ul id="contentList">
-	<li><a href="https://doi.org/10.1038/s41467-021-22793-x">* Two-dimensional charge order stabilized in clean polytype heterostructures<br /><span class="gray"><i>Nature Communications,</i> 2022</span></a></li>
-	<li><a href="https://doi.org/10.1038/s41467-021-22793-x">Robotic Four-Dimensional Pixel Assembly of van der Waals Solids<br /><span class="gray"><i>Nature Nanotechnology,</i> 2022</span></a></li>
-	<li><a href="https://doi.org/10.1038/s41467-021-22793-x">Twist engineering of the two-dimensional magnetism in double bilayer chromium triiodide homostructures<br /><span class="gray"><i>Nature Physics,</i> 2021</span></a></li>
-	<li><a href="https://doi.org/10.1038/s41467-021-22793-x">Ultrafast Modulations and Detection of a Ferro-Rotational Charge Density Wave Using Time-Resolved Electric Quadrupole Second Harmonic Generation<br /><span class="gray"><i>Physical Review Letters,</i> 2021</span></a></li>
-	<li><a href="https://doi.org/10.1038/s41467-021-22793-x">Engineering new limits to magnetostriction through metastability in iron-gallium alloys<br /><span class="gray"><i>Nature Communications,</i> 2021</span></a></li>
-	<li><a href="https://doi.org/10.1103/PhysRevApplied.15.014003">* Limits of Three-Dimensional Resolution and Dose for Aberration-Corrected Electron Tomography<br /><span class="gray"><i>Physical Review Applied,</i> 2021</span></a></li>
-	<li><a href="http://dx.doi.org/10.1017/S1431927620001841">* Optimal STEM Convergence Angle Selection using a Convolution Neural Network and the Strehl Ratio<br /><span class="gray"><i>Microscopy & Microanalysis,</i> 2020</span></a></li>
-	<li><a href="https://doi.org/10.1103/PhysRevMaterials.3.104420">Magnetic Frustration Control Through Tunable Stereochemically-Driven Structural Disorder in Entropy-Stabilized Oxides<br /><span class="gray"><i>Physical Review Materials,</i> 2019</span></a></li>
-	<li><a href="https://doi.org/10.1016/j.joule.2019.07.022">A Single Junction Cathodic Approach for Stable Unassisted Solar Water Splitting<br /><span class="gray"><i>Joule,</i> 2019</span></a></li>
-	<li><a href="https://doi.org/10.1103/PhysRevMaterials.3.064003">* Stacking, Strain, & Twist in 2D materials Quantified by 3D Electron Diffraction<br /><span class="gray"><i>Physical Review Materials,</i> 2019</span></a></li>
-	<li><a href="https://doi.org/10.1017/S1551929519000427">*,† Introduction to the Ronchigram and its Calculation with Ronchigram.com<br /><span class="gray"><i>Microscopy Today,</i> 2019</span></a></li>
-	<li><a href="https://doi.org/10.1038/s41563-019-0346-z">Atomic and Electronic Reconstruction at the van der Waals Interface in Twisted Bilayer Graphene<br /><span class="gray"><i>Nature Materials,</i> 2019</span></a></li>
-	<li><a href="https://doi.org/10.1063/1.4958336">Epitaxial growth and electronic properties of mixed valence YbAl3 thin films<br /><span class="gray"><i>Journal of Applied Physics,</i> 2016</span></a></li>
-	<li><a href="https://doi.org/10.1038/ncomms5530">Atomically precise interfaces from stoichiometric deposition<br /><span class="gray"><i>Nature Communications,</i> 2014</span></a></li>
+	<div id = "testdiv"></div>
 	<li><p> </p></li>
 	<li>* First or Co-first Author</li>
 	<li>† Corresponding Author</li>
