--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<link rel = "stylesheet" href="css/index.css">
 		<script src="js/jquery-3.4.1.min.js"></script>
 		<script src="js/index.js"></script>
-			<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-			<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+			<link rel="icon" type="image/png" sizes="32x32" href="/data/favicon-32x32.png">
+			<link rel="icon" type="image/png" sizes="16x16" href="/data/favicon-16x16.png">
 			<meta name="theme-color" content="#ffffff">
 			
 			
@@ -33,8 +33,10 @@
 					<li><a href="#" id="aboutme"		 class="inactive">About Me</a></li>
 					<li><a href="#" id="publications" class="inactive">Publications</a></li>
 					<li><a href="#" id="cv" class="inactive">C. V.</a></li>
+					<li><img src = "/data/darkmode.svg" id="darkmode" onclick="toggleDark()"/></li>
+					<li><a href="https://ronchigram.com">ronchigram.com</a></li>
+					<li><a href="https://shsung.com/realtimeFarfield">realtimeFarfield</a></li>
 					<!-- <li><a href="Cv.pdf" id="cv" class="inactive">C. V.</a></li> -->
-					<li><img src = "darkmode.svg" id="darkmode" onclick="toggleDark()"/></li>
 					<!-- <li><a href="#" id="music"		 class="inactive">Music</a></li> -->
 				</ul>
 			</div>		
