highlighting behavior modified

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<li><a href="#" id="aboutme"		 class="inactive">About Me</a></li>
 					<li><a href="#" id="publications" class="inactive">Publications</a></li>
 					<li><a href="#" id="cv" class="inactive">C. V.</a></li>
-					<li><img src = "/data/darkmode.svg" id="darkmode" onclick="toggleDark()"/></li>
+					<li><img src = "/data/testmode.svg" id="darkmode" class=".black-green" onclick="toggleDark()"/></li>
 					<li><a href="https://ronchigram.com">ronchigram.com</a></li>
 					<li><a href="https://shsung.com/realtimeFarfield">realtimeFarfield</a></li>
 					<!-- <li><a href="Cv.pdf" id="cv" class="inactive">C. V.</a></li> -->
