--- a/aboutme.html
+++ b/aboutme.html
@@ -1,7 +1,12 @@
 <ul id="contentList">
-	<li>Ph.D Candidate in Materials Science and Engineering, University of Michigan, since 2017 <br /><span class="gray">Reserach Interests: Electron Microscopy, 2D Materials, Quantum Materials</span></li>
+	<li>Ph.D Candidate in Materials Science and Engineering, University of Michigan<br />
+		<span class="gray">Reserach Interests: Electron Microscopy, 2D Materials, Quantum Materials</span><br />
+		<a href="http://hovdenlab.com" class="gray">Hovden Lab</a>
+	</li>
 	<li>M.S. in Materials Science and Engineering, Cornell University, 2020</li>
-	<li>B.S. in Engineering Physics, Cornell University, 2016</li>
+	<li>B.S. in Engineering Physics, Cornell University, 2016<br />
+		<a href="https://kourkoutis.research.engineering.cornell.edu" class="gray">Kourkoutis Electron Microscopy Group</a>
+	</li>
 	<li><p></p></li>
 	<li>sukhsung -at- umich.edu</li>
 	<li><p></p></li>
