--- a/publications.html
+++ b/publications.html
@@ -4,7 +4,6 @@
 <ul id="contentList">
 	<div id = "testdiv"></div>
 	<li><p> </p></li>
-	<li>* First or Co-first Author</li>
-	<li>† Corresponding Author</li>
-	<li><a href="https://scholar.google.com/citations?user=8TgOW7YAAAAJ&hl=en&oi=ao">Google Scholar</a></li>
+	<li>* First or Co-first Author,&emsp;&emsp;† Corresponding Author</li>
+	<li><a href="https://scholar.google.com/citations?user=8TgOW7YAAAAJ&hl=en&oi=ao" class="main">Google Scholar</a></li>
 </ul>
