--- a/mainIsing.html
+++ b/mainIsing.html
@@ -3,17 +3,14 @@
 <script src="js/math.js"></script>
 <script src="js/svg.js"></script>
 
-<div id = "svgDiv" width="80vw"  >
+<div id = "svgDiv" >
     <script>
         runIsing();
-
-    </script>
-    
-
+    </script>  
 </div>
 
 <div class="slidecontainer">
-    <input type="range" min="0" max="100" value="50" class="slider" id="TempSlider"><br/>
+    <input type="range" min="0" max="40" value="20" class="slider" id="TempSlider"><br/>
     <input type="radio" id="FM" name="FMAFM" value="fm" checked="true">
     <label for="fm">Ferromagnetic</label><br>
     <input type="radio" id="AFM" name="FMAFM" value="afm">
