github link included in aboutme

--- a/aboutme.html
+++ b/aboutme.html
@@ -9,5 +9,6 @@
 	</li>
 	<li><p></p></li>
 	<li>sukhsung -at- umich.edu</li>
-	<li><p></p></li>
+	<li><p></p></li>	
+	<li><a href="https://scholar.google.com/citations?user=8TgOW7YAAAAJ&hl=en&oi=ao" class="main">Google Scholar</a>,&emsp;&emsp;<a href="https://github.com/sukhsung" class="main">Github</a></li>
 </ul>
