--- a/cv.html
+++ b/cv.html
@@ -4,7 +4,7 @@
     height="700vh"
     style="border: none;"></iframe>
  -->
-<iframe width = "100%" height="700vh" src="js/pdfjs/web/viewer.html?file=/data/CV_Sung.pdf"></iframe>
+<!-- <iframe width = "100%" height="700vh" src="js/pdfjs/web/viewer.html?file=/data/CV_Sung.pdf"></iframe> -->
 <ul id="contentList">
 	<li><a href="/data/CV_Sung.pdf">Curriculum Vitae</a></li>
 </ul>
