publication code updated

--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
 		<span class="gray">Reserach Interests: Electron Microscopy, 2D Materials, Quantum Materials</span><br />
 		<a href="http://hovdenlab.com" class="gray">Hovden Lab</a>
 	</li>
-	<li>M.S. in Materials Science and Engineering, Cornell University, 2020</li>
+	<li>M.S. in Materials Science and Engineering, University of Michigan, 2020</li>
 	<li>B.S. in Engineering Physics, Cornell University, 2016<br />
 		<a href="https://kourkoutis.research.engineering.cornell.edu" class="gray">Kourkoutis Electron Microscopy Group</a>
 	</li>
