--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,9 @@
 
 	<div class="flex-child">
 		<ul id="contentList">
-		<li>Ph.D Candidate in Materials Science and Engineering, University of Michigan<br />
+		<li>Reserach Associate at <a href="http://hovdenlab.com" class="gray">Hovden Lab</a>
+		</li>
+		<li>Ph.D in Materials Science and Engineering, University of Michigan, 2023<br />
 			<span class="gray">Reserach Interests: Electron Microscopy, 2D Materials, Quantum Materials</span><br />
 			<a href="http://hovdenlab.com" class="gray">Hovden Lab</a>
 		</li>
