updated cv, etc

--- a/aboutme.html
+++ b/aboutme.html
@@ -1,23 +1,25 @@
 
 <div class="flex-container">
 	<div id="photo_profile" class="flex-child">
-		<img src="data/Sung_Photo.png" class="rounded">
+		<img src="data/Sung_Photo.jpg" class="rounded">
 	</div>
 
 	<div class="flex-child">
 		<ul id="contentList">
-		<li>Reserach Associate at <a href="http://hovdenlab.com" class="gray">Hovden Lab</a>
+		<li>Postdoctoral Fellow at  The Rowland Institute at Harvard University <br \>
+			<span class="gray">Reserach Interests: Electron Microscopy at Extreme Conditions, Quantum Materials</span><br />
+			<a href="https://www.elbaggarilab.com" class="gray">El Baggari Lab ↗</a>
 		</li>
 		<li>Ph.D in Materials Science and Engineering, University of Michigan, 2023<br />
 			<span class="gray">Reserach Interests: Electron Microscopy, 2D Materials, Quantum Materials</span><br />
-			<a href="http://hovdenlab.com" class="gray">Hovden Lab</a>
+			<a href="http://hovdenlab.com" class="gray">Hovden Lab ↗</a>
 		</li>
 		<li>M.S. in Materials Science and Engineering, University of Michigan, 2020</li>
 		<li>B.S. in Engineering Physics, Cornell University, 2016<br />
-			<a href="https://kourkoutis.research.engineering.cornell.edu" class="gray">Kourkoutis Electron Microscopy Group</a>
+			<a href="https://kourkoutis.research.engineering.cornell.edu" class="gray">Kourkoutis Electron Microscopy Group ↗</a>
 		</li>
 		<li><p></p></li>
-		<li>sukhsung -at- umich.edu</li>
+		<li>ssung -at- g.harvard.edu</li>
 		<li><p></p></li>	
 		<li><a href="https://scholar.google.com/citations?user=8TgOW7YAAAAJ&hl=en&oi=ao" class="main">Google Scholar</a>,&emsp;&emsp;<a href="https://github.com/sukhsung" class="main">Github</a></li>
 		</ul>
