--- a/publications.html
+++ b/publications.html
@@ -2,8 +2,7 @@
 <script type="text/javascript" src="/js/publications.js"></script>
 
 <ul id="contentList">
+	<li align="right">* First or Co-first Author,&emsp;&emsp;† Corresponding Author</li>
+	<li align="right"><a href="https://scholar.google.com/citations?user=8TgOW7YAAAAJ&hl=en&oi=ao" class="main">Google Scholar</a></li>
 	<div id = "testdiv"></div>
-	<li><p> </p></li>
-	<li>* First or Co-first Author,&emsp;&emsp;† Corresponding Author</li>
-	<li><a href="https://scholar.google.com/citations?user=8TgOW7YAAAAJ&hl=en&oi=ao" class="main">Google Scholar</a></li>
 </ul>
