--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 					<li><a href="#" id="cv" class="inactive">C. V.</a></li>
 					<li><img src = "/data/testmode.svg" id="darkmode" class=".black-green" onclick="toggleDark()"/></li>
 					<li><a href="https://ronchigram.com">ronchigram.com</a></li>
+					<li><a href="https://shsung.com/FTAtlas">Atlas of FT</a></li>
+					<li><a href="https://inelastic.info">Inelastic.info</a></li>
 					<li><a href="https://shsung.com/realtimeFarfield">realtimeFarfield</a></li>
 					<!-- <li><a href="Cv.pdf" id="cv" class="inactive">C. V.</a></li> -->
 					<!-- <li><a href="#" id="music"		 class="inactive">Music</a></li> -->
