--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
 		<link rel = "stylesheet" href="css/index.css">
 		<script src="js/jquery-3.4.1.min.js"></script>
 		<script src="js/index.js"></script>
-			<link rel="icon" type="image/png" sizes="32x32" href="/data/favicon-32x32.png">
-			<link rel="icon" type="image/png" sizes="16x16" href="/data/favicon-16x16.png">
-			<meta name="theme-color" content="#ffffff">
+		<link rel="icon" type="image/png" sizes="32x32" href="/data/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/data/favicon-16x16.png">
+		<meta name="theme-color" content="#ffffff">
 			
 			
-			<meta name="viewport" content="width=device-width, initial-scale=1">
-			<!-- Global site tag (gtag.js) - Google Analytics -->
-			<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122222775-2"></script>
-			<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag(){dataLayer.push(arguments);}
-			gtag('js', new Date());
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z64529GR1M"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
 
-			gtag('config', 'UA-122222775-2');
+		gtag('config', 'G-Z64529GR1M');
 		</script>
 
 	</head>
