--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<li><a href="#" id="cv" class="inactive">C. V.</a></li>
 					<li><img src = "/data/testmode.svg" id="darkmode" class=".black-green" onclick="toggleDark()"/></li>
 					<li><a href="https://ronchigram.com">ronchigram.com</a></li>
-					<li><a href="https://shsung.com/FTAtlas">Atlas of FT</a></li>
+					<li><a href="https://www.kickstarter.com/projects/hlab/atlas-of-fourier-transforms">Atlas of FT</a></li>
 					<li><a href="https://inelastic.info">Inelastic.info</a></li>
 					<li><a href="https://shsung.com/realtimeFarfield">realtimeFarfield</a></li>
 					<!-- <li><a href="Cv.pdf" id="cv" class="inactive">C. V.</a></li> -->
